--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#ffffff</color>
     <color name="gray">#eeeeee</color>
     <color name="black">#141620</color>
+    <color name="gold">#f1b025</color>
 </resources>
