--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,21 +3,26 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_boon"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import"/>
+            android:checked="true"
+            android:title="福利"/>
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_android"
+            android:icon="@drawable/ic_menu_android"
+            android:title="Android"/>
+        <item
+            android:id="@+id/nav_ios"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery"/>
+            android:title="iOS"/>
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_web"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow"/>
+            android:title="前端"/>
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools"/>
+            android:id="@+id/nav_source"
+            android:icon="@drawable/ic_menu_source"
+            android:title="拓展资源"/>
     </group>
 
     <item android:title="Communicate">
