--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="_16sp">16sp</dimen>
     <dimen name="_4dp">4dp</dimen>
     <dimen name="_18sp">18sp</dimen>
+    <dimen name="_16dp">16dp</dimen>
+    <dimen name="_8dp">8dp</dimen>
 </resources>
