--- a/app/src/main/res/layout/item_gank.xml
+++ b/app/src/main/res/layout/item_gank.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="gank.sin.me.gk.ui.viewModel.GankItemViewModel"/>
+            type="gank.sin.me.gk.ui.viewmodel.GankItemViewModel"/>
     </data>
 
     <LinearLayout
