--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="viewModel"
-            type="gank.sin.me.gk.ui.viewModel.SearchViewModel"/>
+            type="gank.sin.me.gk.ui.viewmodel.SearchViewModel"/>
 
     </data>
 
