--- a/app/src/main/res/layout/activity_web_activity.xml
+++ b/app/src/main/res/layout/activity_web_activity.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="gank.sin.me.gk.ui.viewModel.WebViewModel"/>
+            type="gank.sin.me.gk.ui.viewmodel.WebViewModel"/>
 
     </data>
 
