--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                     android:layout_height="?attr/actionBarSize"
                     android:background="?attr/colorPrimary"
                     app:layout_scrollFlags="scroll|enterAlways"
+                    android:contentInsetStart="0dp"
                     app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"/>
             </android.support.design.widget.AppBarLayout>
 
