--- a/app/src/main/res/layout/item_boon.xml
+++ b/app/src/main/res/layout/item_boon.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -8,33 +7,32 @@
 
         <variable
             name="viewModel"
-            type="gank.sin.me.gk.ui.viewmodel.GankItemViewModel"/>
+            type="gank.sin.me.gk.ui.viewmodel.GankItemViewModel" />
     </data>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_boon"
-        android:orientation="vertical">
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:background="@drawable/bg_boon">
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            fresco:viewAspectRatio="0.618"
-            />
+            fresco:viewAspectRatio="0.618" />
 
         <TextView
             android:id="@+id/publish_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="@dimen/_8dp"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:gravity="right"
             android:text="@{viewModel.publishedAt}"
             android:textColor="@color/gold"
-            android:layout_gravity="bottom"
-            android:layout_marginBottom="@dimen/_8dp"
             android:textSize="@dimen/_16sp"
-            tools:text="2016-08-10"/>
+            tools:text="2016-08-10" />
     </FrameLayout>
 </layout>
