--- a/app/src/main/res/drawable/bg_item_gank.xml
+++ b/app/src/main/res/drawable/bg_item_gank.xml
@@ -5,7 +5,7 @@
             <item>
                 <shape android:shape="rectangle">
                     <solid android:color="#f5d67f"/>
-                    <!--<padding android:left="12dp"/>-->
+                    <padding android:left="12dp"/>
                 </shape>
             </item>
             <item>
@@ -20,7 +20,7 @@
             <item>
                 <shape android:shape="rectangle">
                     <solid android:color="#ac9450"/>
-                    <!--<padding android:left="12dp"/>-->
+                    <padding android:left="12dp"/>
                 </shape>
             </item>
             <item>
