--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
-    <dimen name="_16sp">16sp</dimen>
+
     <dimen name="_4dp">4dp</dimen>
-    <dimen name="_18sp">18sp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_8dp">8dp</dimen>
+
+    <!--text_size-->
+    <dimen name="min">14sp</dimen>
+    <dimen name="mid">16sp</dimen>
+    <dimen name="max">18sp</dimen>
 </resources>
